adding soups to routes
