# api/services.py
@@ -445,6 +445,40 @@ def search_appetizers_by_title(keyword):
     # Convert the results to a list of dictionaries
     return [{"RecipeID": row["RecipeID"], "Title": row["Title"], "ImageURL": row["ImageURL"]} for row in results]
 
+# Get an soup recipe by a keyword in the title - to be copied for other categories and used for search bar
+def search_soups_by_title(keyword):
+    """
+    Searches for soup recipes based on a keyword in the title.
+
+    Args:
+        keyword (str): The search term provided by the user.
+
+    Returns:
+        list: A list of dictionaries containing RecipeID, Title, and ImageURL.
+    """
+    query = """
+    SELECT 
+        r.RecipeID, 
+        r.Title, 
+        r.ImageURL 
+    FROM 
+        Recipes r
+    JOIN 
+        Category_Recipe_fact_table rcft ON r.RecipeID = rcft.RecipeID
+    JOIN 
+        Categories c ON rcft.CategoryID = c.CategoryID
+    WHERE 
+        c.CategoryName = 'Soups'
+        AND r.Title LIKE ?
+    LIMIT 5;
+    """
+    keyword_pattern = f"%{keyword}%"  # Add wildcard for partial matching
+    connection = get_db_connection()
+    results = connection.execute(query, (keyword_pattern,)).fetchall()
+    connection.close()
+
+    # Convert the results to a list of dictionaries
+    return [{"RecipeID": row["RecipeID"], "Title": row["Title"], "ImageURL": row["ImageURL"]} for row in results]
 
 # Search for recipes with a group of keywords - to be used on a page for search_by_ingredients 
 def search_recipes_by_ingredients(keywords, limit=5, min_matches=2):
